cabal-version:      2.4
name:               bookkeeper-app
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Khanh Hua
maintainer:         giakhanh2487@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library bookkeeper
    exposed-modules:  
        Data.Book
      , Data.Checkout
      , Controls.Database

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    
        base ^>=4.16.4.0
      , time ^>=1.11.1.1
      , bytestring ==0.12.0.2
      , binary ==0.8.9.0
    hs-source-dirs:   src
    default-language: Haskell2010

executable app 
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.16.4.0
      , time ^>=1.11.1.1
      , bookkeeper 

    hs-source-dirs:   app
    default-language: Haskell2010
